# wallpaper

./: .gitignore  README.en.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: android.yml  build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: scene.frag.glsl  scene.vert.glsl
android/app/src/main/java/com/lucky/yinlangwallpaper/: MainActivity.kt  SceneRenderer.kt  YinlangWallpaperService.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: wallpaper.xml
src/: index.html
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/helper/: audio-tap.swift
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  system_audio.rs  wallpaper.rs
